--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dependencies": {
         "@mdx-js/mdx": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
+        "flexsearch": "^0.6.32",
         "gatsby": "^3.9.0",
         "gatsby-awesome-pagination": "^0.3.8",
         "gatsby-plugin-image": "^1.9.0",
+        "gatsby-plugin-local-search": "^2.0.1",
         "gatsby-plugin-mdx": "^2.9.0",
         "gatsby-plugin-sass": "^4.9.0",
         "gatsby-plugin-sharp": "^3.9.0",
@@ -31,6 +33,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.2.0",
+        "react-use-flexsearch": "^0.1.1",
         "sass": "^1.35.2"
     },
     "devDependencies": {
