--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@mdx-js/mdx": "^1.6.22",
         "@mdx-js/react": "^1.6.22",
+        "@types/prismjs": "^1.16.6",
         "flexsearch": "^0.6.32",
         "gatsby": "^3.9.0",
         "gatsby-awesome-pagination": "^0.3.8",
@@ -26,10 +27,13 @@
         "gatsby-plugin-mdx": "^2.9.0",
         "gatsby-plugin-sass": "^4.9.0",
         "gatsby-plugin-sharp": "^3.9.0",
+        "gatsby-remark-prismjs": "^5.7.0",
         "gatsby-source-filesystem": "^3.9.0",
         "gatsby-transformer-remark": "^4.6.0",
         "gatsby-transformer-sharp": "^3.9.0",
+        "github-markdown-css": "^4.0.0",
         "nord": "^0.2.1",
+        "prismjs": "^1.24.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.2.0",
@@ -37,6 +41,12 @@
         "sass": "^1.35.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.14.8",
+        "@babel/eslint-parser": "^7.14.7",
+        "@typescript-eslint/eslint-plugin": "^4.28.4",
+        "@typescript-eslint/parser": "^4.28.4",
+        "eslint": "^7.31.0",
+        "eslint-plugin-react": "^7.24.0",
         "npm-run-all": "^4.1.5",
         "prettier": "2.3.2",
         "ts-node": "^9.1.1",
